# openclawd-stack

./: .gitignore  LICENSE  README.md
Open-Clawd/clawd-vault-master/python/: .gitignore  README.md  pyproject.toml
Open-Clawd/clawd-vault-master/python/tests/: test_vault.py
openclawd-stack/NemoClawd-main/Pump-Fun/rust/: Cargo.toml  README.md
openclawd-stack/OpenShell-main/: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STYLEGUIDE.md  TESTING.md  THIRD-PARTY-NOTICES  about.toml  install-vm.sh  install.sh  mise.toml  pyproject.toml  rust-toolchain.toml
openclawd-stack/OpenShell-main/.claude/: README.md
openclawd-stack/OpenShell-main/.claude/agents/: arch-doc-writer.md  principal-engineer-reviewer.md
openclawd-stack/OpenShell-main/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  VOUCHED.td
openclawd-stack/OpenShell-main/.github/DISCUSSION_TEMPLATE/: vouch-request.yml
openclawd-stack/OpenShell-main/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
openclawd-stack/OpenShell-main/.github/workflows/: branch-checks.yml  branch-docs.yml  branch-e2e.yml  ci-image.yml  dco.yml  docker-build.yml  e2e-gpu-test.yaml  e2e-test.yml  issue-triage.yml  release-auto-tag.yml  release-canary.yml  release-dev.yml  release-tag.yml  release-vm-dev.yml  release-vm-kernel.yml  test-gpu.yml  test-install.yml  vouch-check.yml  vouch-command.yml
openclawd-stack/OpenShell-main/.opencode/agents/: arch-doc-writer.md  principal-engineer-reviewer.md
openclawd-stack/OpenShell-main/architecture/: README.md  build-containers.md  custom-vm-runtime.md  docs-site.md  gateway-deploy-connect.md  gateway-security.md  gateway-settings.md  gateway-single-node.md  gateway.md  inference-routing.md  policy-advisor.md  sandbox-connect.md  sandbox-custom-containers.md  sandbox-providers.md  sandbox.md  security-policy.md  system-architecture.md  tui.md
openclawd-stack/OpenShell-main/crates/openshell-bootstrap/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-cli/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-core/: Cargo.toml  build.rs
openclawd-stack/OpenShell-main/crates/openshell-driver-kubernetes/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-driver-vm/: Cargo.toml  Makefile  README.md  build.rs  start.sh
openclawd-stack/OpenShell-main/crates/openshell-ocsf/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-policy/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-prover/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-providers/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-router/: Cargo.toml  README.md
openclawd-stack/OpenShell-main/crates/openshell-sandbox/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-server/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-tui/: Cargo.toml
openclawd-stack/OpenShell-main/crates/openshell-vm/: Cargo.toml  README.md  build.rs  pins.env
openclawd-stack/OpenShell-main/deploy/docker/: .dockerignore  Dockerfile.ci  Dockerfile.cli-macos  Dockerfile.driver-vm-macos  Dockerfile.gateway-macos  Dockerfile.images  Dockerfile.python-wheels  Dockerfile.python-wheels-macos  Dockerfile.vm-macos  cluster-entrypoint.sh  cluster-healthcheck.sh  cross-build.sh
openclawd-stack/OpenShell-main/deploy/sbom/: resolve_licenses.py  sbom_to_csv.py
openclawd-stack/OpenShell-main/docs/: CONTRIBUTING.mdx  index.mdx  index.yml
openclawd-stack/OpenShell-main/docs/_components/: BadgeLinks.tsx
openclawd-stack/OpenShell-main/docs/about/: architecture.mdx  overview.mdx  release-notes.mdx  supported-agents.mdx
openclawd-stack/OpenShell-main/docs/get-started/: quickstart.mdx
openclawd-stack/OpenShell-main/docs/inference/: about.mdx  configure.mdx
openclawd-stack/OpenShell-main/docs/observability/: accessing-logs.mdx  logging.mdx  ocsf-json-export.mdx  overview.mdx
openclawd-stack/OpenShell-main/docs/reference/: default-policy.mdx  gateway-auth.mdx  policy-schema.mdx  support-matrix.mdx
openclawd-stack/OpenShell-main/docs/resources/: license.mdx
openclawd-stack/OpenShell-main/docs/sandboxes/: about.mdx  community-sandboxes.mdx  manage-gateways.mdx  manage-providers.mdx  manage-sandboxes.mdx  policies.mdx
openclawd-stack/OpenShell-main/docs/security/: best-practices.mdx
openclawd-stack/OpenShell-main/e2e/install/: bash_test.sh  fish_test.fish  helpers.sh  sh_test.sh  zsh_test.sh
openclawd-stack/OpenShell-main/e2e/python/: conftest.py  test_inference_routing.py  test_policy_validation.py  test_sandbox_api.py  test_sandbox_exec_python.py  test_sandbox_gpu.py  test_sandbox_landlock.py  test_sandbox_policy.py  test_sandbox_providers.py  test_sandbox_venv.py  test_security_tls.py
openclawd-stack/OpenShell-main/e2e/rust/: Cargo.toml  e2e-vm.sh
openclawd-stack/OpenShell-main/examples/: gateway-deploy-connect.md  openclaw.md  sync-files.md  vscode-remote-sandbox.md
openclawd-stack/OpenShell-main/examples/bring-your-own-container/: Dockerfile  README.md  app.py
openclawd-stack/OpenShell-main/examples/local-inference/: README.md  inference.py  routes.yaml  sandbox-policy.yaml
openclawd-stack/OpenShell-main/examples/policy-advisor/: README.md  ctf.py  sandbox-policy.yaml
openclawd-stack/OpenShell-main/examples/private-ip-routing/: Dockerfile  README.md  server.py
openclawd-stack/OpenShell-main/fern/: docs.yml  fern.config.json  main.css
openclawd-stack/OpenShell-main/proto/: compute_driver.proto  datamodel.proto  inference.proto  openshell.proto  sandbox.proto
openclawd-stack/OpenShell-main/rfc/: README.md
openclawd-stack/OpenShell-main/scripts/: docker-cleanup.sh  generate_third_party_notices.py  remote-deploy.sh  smoke-test-network-policy.sh  test-release-tag.sh  update_license_headers.py
openclawd-stack/OpenShell-main/tasks/: ci.toml  cluster.toml  docker.toml  docs.toml  helm.toml  license.toml  notices.toml  python.toml  rust.toml  sandbox.toml  sbom.toml  term.toml  test.toml  version.toml  vm.toml
(+1762 files in other folders)
