# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-cli"
description = "OpenShell CLI tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openshell"
path = "src/main.rs"

[dependencies]
openshell-bootstrap = { path = "../openshell-bootstrap" }
openshell-core = { path = "../openshell-core" }
openshell-policy = { path = "../openshell-policy" }
openshell-providers = { path = "../openshell-providers" }
openshell-prover = { path = "../openshell-prover" }
openshell-tui = { path = "../openshell-tui" }
serde = { workspace = true }
serde_json = { workspace = true }
prost-types = { workspace = true }

# Async runtime
tokio = { workspace = true }

# gRPC client
tonic = { workspace = true, features = ["tls", "tls-native-roots"] }

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }
crossterm = { workspace = true }
dialoguer = "0.11"
indicatif = { workspace = true }
owo-colors = { workspace = true }

# HTTP client (health fallback)
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "tls12", "logging", "ring", "webpki-tokio"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
reqwest = { workspace = true }

# Error handling
miette = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# File archiving (tar-over-SSH sync)
tar = "0.4"

# WebSocket (Cloudflare tunnel proxy)
tokio-tungstenite = { workspace = true }

# Streams
futures = { workspace = true }
nix = { workspace = true }

# URL parsing
url = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[features]
bundled-z3 = ["openshell-prover/bundled-z3"]
dev-settings = ["openshell-core/dev-settings"]

[dev-dependencies]
futures = { workspace = true }
rcgen = { version = "0.13", features = ["crypto", "pem"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
temp-env = "0.3"
tempfile = "3"
tokio-stream = { workspace = true }
url = { workspace = true }
