# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-core"
description = "Shared library for OpenShell - proto definitions, config, and errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
ipnet = "2"

[features]
## Include test-only settings (dummy_bool, dummy_int) in the registry.
## Off by default so production builds have an empty registry.
## Enabled by e2e tests and during development.
dev-settings = []

[build-dependencies]
tonic-build = { workspace = true }
protobuf-src = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
