# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-ocsf"
description = "OCSF v1.7.0 event types, formatters, and tracing layers for OpenShell sandbox logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[lints]
workspace = true
