# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-policy"
description = "Shared sandbox policy parsing and defaults for OpenShell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core" }
serde = { workspace = true }
serde_yml = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true
