# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MicroVM runtime using libkrun for hardware-isolated execution"

[lib]
name = "openshell_vm"
path = "src/lib.rs"

[[bin]]
name = "openshell-vm"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { workspace = true }
indicatif = "0.17"
libc = "0.2"
libloading = "0.8"
miette = { workspace = true }
nix = { workspace = true }
openshell-bootstrap = { path = "../openshell-bootstrap" }
openshell-core = { path = "../openshell-core" }
serde = { workspace = true }
serde_json = "1"
tar = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = "0.13"

# Async runtime and gRPC for health check
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-native-roots"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

[build-dependencies]
zstd = "0.13"

[lints]
workspace = true
